Second try using transformation-rules