@@ -1,10 +1,11 @@
 package com.learnlogic.ecommerce.merabazar.database.daoImpl;
 
 import java.util.List;
-
-
-import org.springframework.orm.hibernate4.support.HibernateDaoSupport;
+import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceContext;
+import jakarta.persistence.TypedQuery;
 import org.springframework.stereotype.Repository;
+import org.springframework.transaction.annotation.Transactional;
 
 
 
@@ -16,31 +17,35 @@ import com.learnlogic.ecommerce.merabazar.model.Users;
 
 
 @Repository
-public class UserDaoImpl extends HibernateDaoSupport implements UserDao{
+@Transactional
+public class UserDaoImpl implements UserDao {
 
-//	sssss
+    @PersistenceContext
+    private EntityManager entityManager;
+
 	public void createUser(Users users) {
 		// TODO Auto-generated method stub
-	  getHibernateTemplate().save(users);;
+        entityManager.persist(users);
 	}
 
 	public void updateUser(Users users) {
 		// TODO Auto-generated method stub
-		getHibernateTemplate().update(users);;
+        entityManager.merge(users);
 	}
 
 	public List<Users> retriveAll() {
 		// TODO Auto-generated method stub
-		return null;
+        TypedQuery<Users> query = entityManager.createQuery("SELECT u FROM Users u", Users.class);
+        return query.getResultList();
 	}
 
 	@SuppressWarnings("unchecked")
 	public List<Users> retriveById(Users user) {
 		// TODO Auto-generated method stub
-	 List<Users> list = (List<Users>) getHibernateTemplate().find(
-                "from Users where userId=?",user
-          );
-	return (List<Users>)list.get(0);
+        TypedQuery<Users> query = entityManager.createQuery(
+            "SELECT u FROM Users u WHERE u.userId = :userId", Users.class);
+        query.setParameter("userId", user.getUserId());
+        List<Users> list = query.getResultList();
+        return list.isEmpty() ? null : List.of(list.getFirst());
 	}
-
 }
